# restaurant-tracker

./: LICENSE  MANIFEST.in  README.md  setup.cfg
restaurant_tracker/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py  widgets.py
restaurant_tracker/migrations/: 0001_initial.py  0002_auto_20190708_1938.py  0003_auto_20190708_1953.py  0004_auto_20190708_1958.py  0005_auto_20190708_2114.py  0006_auto_20191105_1519.py  0007_auto_20191105_1523.py  0008_auto_20191106_1604.py  0009_auto_20191106_1605.py  0010_auto_20191106_1606.py  0011_auto_20191106_1607.py  0012_auto_20191106_1854.py  0013_auto_20220507_1630.py  0014_alter_menuitem_date.py  0015_alter_menuitem_date.py  0016_restaurant_menu_restaurant_visited_and_more.py
restaurant_tracker/static/restaurant_tracker/: base_style.css  star_rating_style.css  style.css
restaurant_tracker/static/restaurant_tracker/css/: base_style.css  price_rating_style.css
restaurant_tracker/static/restaurant_tracker/js/: restaurant-edit.js
restaurant_tracker/templates/: star_rating_widget.html
restaurant_tracker/templates/restaurant_tracker/: base_restaurant.html  base_tag.html  boolean_snippet.html  index.html  menu_items_edit.html  price_rating_widget.html  price_snippet.html  restaurant_confirm_delete.html  restaurant_detail.html  restaurant_edit.html  restaurant_open_closed_snippet.html  speed_snippet.html  star_rating_widget.html  star_snippet.html  tag_confirm_delete.html  tag_display_snippet.html  tag_edit.html  tags.html
restaurant_tracker/templatetags/: restaurant_tracker_extras.py
